# libconfig-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  parser.rs  printer.rs  serde.rs  value.rs
src/parser/: string.rs
src/serde/: deserialize.rs  error.rs  serialize.rs
test/: 2.vproj
tests/: 1.vproj  2.vproj  deserialize_test.rs  serde_test.rs  serialize_test.rs  value_test.rs
