[package]
name = "libconfig-rs"
version = "2.0.1"
edition = "2021"

description = "libconfig parser in rust"
documentation = "https://docs.rs/libconfig-rs"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/JoNil/libconfig-rs"

[dependencies]
indexmap = "2"
nom = "7"
serde = { version = "1", features = ["derive"] }
