[package]
name = "libconfig-rs"
version = "4.0.0"
edition = "2024"

description = "libconfig parser in rust"
documentation = "https://docs.rs/libconfig-rs"
readme = "README.md"
license = "0BSD"
repository = "https://github.com/JoNil/libconfig-rs"

[dependencies]
indexmap = "2"
nom = "8"
serde = { version = "1", features = ["derive"] }
